@@ -1,3 +1,9 @@
+2008-02-24 Arjen Markus  <arjenmarkus@users.sourceforge.net>
+        * pkgIndex.tcl: Increased version number to 1.5.1, require Tcl/Tk 8.4
+        * plotchart.man: Added plotpack command
+        * plotchart.tcl: Added plotpack command
+        * plotpack.tcl: Added plotpack command
+
 2008-02-22 Arjen Markus  <arjenmarkus@users.sourceforge.net>
         * pkgIndex.tcl: Increased version number to 1.5, require Tcl/Tk 8.4
         * plotconfig.tcl: Added this file for configuring the plots
